// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventPreview /> renders correctly and highlighted 1`] = `
<Fragment>
  <div
    className="d-flex flex-1-1 event block  block--bordered highlighted-comment"
  >
    <div
      className="col-md-2 col-sm-2 hidden-xs"
    >
      <DateIcon
        startAt="2018-09-27T03:00:00+01:00"
      />
    </div>
    <div
      className="col-md-10 col-sm-10 col-xs-12 event__body box event-js"
    >
      <h3
        className="event__title"
      >
        <a
          href="http://impossible.com"
          title="Un super evenement"
        >
          Un super evenement
        </a>
      </h3>
      <p
        className="excerpt"
      >
        <UserAvatar
          anchor={true}
          className=""
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          size={16}
          style={Object {}}
          user={
            Object {
              "media": Object {
                "url": "http://monimage.toto",
              },
              "url": "http://jesuistoto.fr",
              "username": "toto",
            }
          }
        />
        <span
          className="font-weight-semi-bold"
        >
          toto
        </span>
      </p>
      <p
        className="excerpt"
      >
        <i
          className="cap-calendar-1 mr-10"
        />
        <DatesInterval
          endAt="2019-09-27T03:00:00+01:00"
          fullDay={true}
          startAt="2018-09-27T03:00:00+01:00"
        />
      </p>
      <p
        className="excerpt"
      >
        <i
          className="cap-marker-1 mr-10"
        />
        21 rue george 5, 75012 Paris
      </p>
      <div
        className="excerpt"
      >
        <i
          className="cap cap-folder-2 mr-10 r-0"
        />
        <InlineList
          className="d-i"
          separator=","
        >
          <li
            key="0"
          >
            <a
              href="https://estcequecestbientotlheuredugouter.neocities.org/"
              title="Le gouter c'est la vie"
            >
              Le gouter c'est la vie
            </a>
          </li>
        </InlineList>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`<EventPreview /> renders correctly and not highlighted 1`] = `
<Fragment>
  <div
    className="d-flex flex-1-1 event block  block--bordered "
  >
    <div
      className="col-md-2 col-sm-2 hidden-xs"
    >
      <DateIcon
        startAt="2018-09-27T03:00:00+01:00"
      />
    </div>
    <div
      className="col-md-10 col-sm-10 col-xs-12 event__body box event-js"
    >
      <h3
        className="event__title"
      >
        <a
          href="http://impossible.com"
          title="Un super evenement"
        >
          Un super evenement
        </a>
      </h3>
      <p
        className="excerpt"
      >
        <UserAvatar
          anchor={true}
          className=""
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          size={16}
          style={Object {}}
          user={
            Object {
              "media": Object {
                "url": "http://monimage.toto",
              },
              "url": "http://jesuistoto.fr",
              "username": "toto",
            }
          }
        />
        <span
          className="font-weight-semi-bold"
        >
          toto
        </span>
      </p>
      <p
        className="excerpt"
      >
        <i
          className="cap-calendar-1 mr-10"
        />
        <DatesInterval
          endAt="2019-09-27T03:00:00+01:00"
          fullDay={true}
          startAt="2018-09-27T03:00:00+01:00"
        />
      </p>
      <p
        className="excerpt"
      >
        <i
          className="cap-marker-1 mr-10"
        />
        21 rue george 5, 75012 Paris
      </p>
      <div
        className="excerpt"
      >
        <i
          className="cap cap-folder-2 mr-10 r-0"
        />
        <InlineList
          className="d-i"
          separator=","
        >
          <li
            key="0"
          >
            <a
              href="https://estcequecestbientotlheuredugouter.neocities.org/"
              title="Le gouter c'est la vie"
            >
              Le gouter c'est la vie
            </a>
          </li>
        </InlineList>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`<EventPreview /> renders correctly without picture for user 1`] = `
<Fragment>
  <div
    className="d-flex flex-1-1 event block  block--bordered "
  >
    <div
      className="col-md-2 col-sm-2 hidden-xs"
    >
      <DateIcon
        startAt="2018-09-27T03:00:00+01:00"
      />
    </div>
    <div
      className="col-md-10 col-sm-10 col-xs-12 event__body box event-js"
    >
      <h3
        className="event__title"
      >
        <a
          href="http://impossible.com"
          title="Un super evenement"
        >
          Un super evenement
        </a>
      </h3>
      <p
        className="excerpt"
      >
        <UserAvatar
          anchor={true}
          className=""
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          size={16}
          style={Object {}}
          user={
            Object {
              "media": null,
              "url": "http://jesuistoto.fr",
              "username": "toto",
            }
          }
        />
        <span
          className="font-weight-semi-bold"
        >
          toto
        </span>
      </p>
      <p
        className="excerpt"
      >
        <i
          className="cap-calendar-1 mr-10"
        />
        <DatesInterval
          endAt="2019-09-27T03:00:00+01:00"
          fullDay={true}
          startAt="2018-09-27T03:00:00+01:00"
        />
      </p>
      <p
        className="excerpt"
      >
        <i
          className="cap-marker-1 mr-10"
        />
        21 rue george 5, 75012 Paris
      </p>
      <div
        className="excerpt"
      >
        <i
          className="cap cap-folder-2 mr-10 r-0"
        />
        <InlineList
          className="d-i"
          separator=","
        >
          <li
            key="0"
          >
            <a
              href="https://estcequecestbientotlheuredugouter.neocities.org/"
              title="Le gouter c'est la vie"
            >
              Le gouter c'est la vie
            </a>
          </li>
        </InlineList>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`<EventPreview /> renders without username 1`] = `
<Fragment>
  <div
    className="d-flex flex-1-1 event block  block--bordered "
  >
    <div
      className="col-md-2 col-sm-2 hidden-xs"
    >
      <DateIcon
        startAt="2018-09-27T03:00:00+01:00"
      />
    </div>
    <div
      className="col-md-10 col-sm-10 col-xs-12 event__body box event-js"
    >
      <h3
        className="event__title"
      >
        <a
          href="http://impossible.com"
          title="Un super evenement"
        >
          Un super evenement
        </a>
      </h3>
      <p
        className="excerpt"
      />
      <p
        className="excerpt"
      >
        <i
          className="cap-calendar-1 mr-10"
        />
        <DatesInterval
          endAt="2019-09-27T03:00:00+01:00"
          fullDay={true}
          startAt="2018-09-27T03:00:00+01:00"
        />
      </p>
      <p
        className="excerpt"
      >
        <i
          className="cap-marker-1 mr-10"
        />
        21 rue george 5, 75012 Paris
      </p>
      <div
        className="excerpt"
      >
        <i
          className="cap cap-folder-2 mr-10 r-0"
        />
        <InlineList
          className="d-i"
          separator=","
        >
          <li
            key="0"
          >
            <a
              href="https://estcequecestbientotlheuredugouter.neocities.org/"
              title="Le gouter c'est la vie"
            >
              Le gouter c'est la vie
            </a>
          </li>
        </InlineList>
      </div>
    </div>
  </div>
</Fragment>
`;
